# NukeMCP

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: INSTALL.md  SECURITY.md  TOOLS.md
nuke_addon/: menu.py
nuke_addon/nukemcp_server/: constants.py  dispatch.py  listener.py
nuke_addon/nukemcp_server/handlers/: animation.py  diagnostics.py  execute.py  graph.py  knob_serialization.py  layout.py  nodes.py  render.py  script_info.py  script_io.py  selection.py  templates.py  viewer.py
server/: .mcpbignore  manifest.json  pyproject.toml
server/src/nukemcp/: __init__.py  __main__.py  connection.py  constants.py
server/src/nukemcp/tools/: __init__.py  animation.py  batch.py  diagnostics.py  execute.py  graph.py  layout.py  nodes.py  render.py  script_info.py  script_io.py  selection.py  templates.py  viewer.py
tests/: conftest.py  test_connection.py  test_protocol.py
tests/fixtures/: fake_nuke_listener.py
