[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nukemcp"
version = "0.3.0"
description = "MCP server for inspecting and controlling a running Nuke session"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
nukemcp = "nukemcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nukemcp"]
